--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,12 @@
+div.content{
+	padding-top: 45px;
+}
+div.hero{
+	background-color: #1e2247;	
+}
+div.hero h1{
+	color: white;
+}
 li.name h1 img{
 	max-height: 2.9em;
 }
