--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,14 @@ div.hero{
 div.hero *{
 	color: white;
 }
+div.hero li {
+	list-style-type: none;
+	font-size: 1.3em;
+}
+div.hero li img{
+	max-height: 1em;
+	padding-right: 1em;
+}
 li.name h1 img{
 	max-height: 2.9em;
 }
