--- a/css/custom.css
+++ b/css/custom.css
@@ -48,3 +48,7 @@ section.top-bar-section .dropdown li:hover:not(.has-form):not(.active) > a:not(.
 section.top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button){
 	background-color: #7676b3;
 }
+section#knowledgebase img{
+	width: 100%;
+	max-height: 1em;
+}
