--- a/css/custom.css
+++ b/css/custom.css
@@ -50,5 +50,10 @@ section.top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button
 }
 section#knowledgebase img{
 	width: 100%;
-	max-height: 1em;
+}
+div#GitHub a{
+	color: black;
+	border: solid 0.15em;
+	padding: 0.55em;
+	border-radius: 0.5em;
 }
