Add backup page

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,20 @@ li.name h1 img{
 	max-height: 2.6em;
     vertical-align: baseline;
 }
+ul.features{
+	list-style-type: none;
+
+}
+ul.features img{
+	max-height: 1em;
+	padding-right: 0.5em;
+}
+ul.features img.grow { 
+	transition: all .2s ease-in-out; 
+}
+ul.features img.grow:hover {
+	transform: scale(1.5); 
+}
 div.contain-to-grid{
     background-color: #7676B3;
 }
@@ -75,3 +89,81 @@ div.kbHeader img{
 div.kbList ul{
 	list-style: none;
 }
+section.changeLog{
+	background-image: url(../img/bikeBridge.jpeg);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+section.leftPadding{
+	padding-left: 1em;
+}
+/* Changelog image effects */
+
+
+.changeLogHover {
+	display: inline-block;
+    position:relative;
+    overflow:hidden;
+    list-style: none;
+}
+.changeLogHover figure {
+    margin:0;
+    padding:0;
+    position:relative;
+    cursor:pointer;
+}
+.changeLogHover figure img {
+    position:relative;
+    z-index:10;
+}
+.changeLogHover figure figcaption {
+    position:absolute;
+    z-index:5;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box
+}
+.changeLogHover figure h2 {
+    color:#fff;
+    text-align:left;
+    font-size: 1.9em;
+}
+.changeLogHover figure p {
+    line-height:18px;
+    margin:0;
+    color:#fff;
+    text-align:left
+}
+.changeLogHover figure figcaption {
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    padding:29px 44px;
+    background-color:rgba(26,76,110,0.5);
+    text-align:center;
+    backface-visibility:hidden;
+    -webkit-transform:rotateY(-180deg);
+    -moz-transform:rotateY(-180deg);
+    transform:rotateY(-180deg);
+    -webkit-transition:all .5s;
+    -moz-transition:all .5s;
+    transition:all .5s
+}
+.changeLogHover figure img {
+    backface-visibility:hidden;
+    -webkit-transition:all .5s;
+    -moz-transition:all .5s;
+    transition:all .5s
+}
+.changeLogHover figure:hover img,figure.hover img {
+    -webkit-transform:rotateY(180deg);
+    -moz-transform:rotateY(180deg);
+    transform:rotateY(180deg)
+}
+.changeLogHover figure:hover figcaption,figure.hover figcaption {
+    -webkit-transform:rotateY(0);
+    -moz-transform:rotateY(0);
+    transform:rotateY(0)
+}
+
