--- a/css/custom.css
+++ b/css/custom.css
@@ -3,8 +3,14 @@
     src: url(../fonts/setarit.otf);
 }
 body *{
-	font-family: setaritFont;    
+	font-family: setaritFont;
 }
+/* navbar logo */
+.top-bar-title img{
+  max-width: 4rem;
+}
+/* end navbar logo*/
+
 div.content{
     background-color: #F5F5FF;
 }
@@ -15,7 +21,7 @@ div#heroContent{
     background-color: transparent;
 }
 div.hero{
-	background-color: #1e2247;	
+	background-color: #1e2247;
 	padding-top: 2em;
 	padding-bottom: 2em;
 }
@@ -42,36 +48,34 @@ ul.features img{
 	max-height: 1em;
 	padding-right: 0.5em;
 }
-ul.features img.grow { 
-	transition: all .2s ease-in-out; 
+ul.features img.grow {
+	transition: all .2s ease-in-out;
 }
 ul.features img.grow:hover {
-	transform: scale(1.5); 
+	transform: scale(1.5);
 }
 div.contain-to-grid{
-    background-color: #7676B3;
+  background-color: #7676B3;
 }
 nav.top-bar{
 	background-color: #7676b3;
 }
-section.top-bar-section li:not(.has-form) a:not(.button){
-	background-color: #7676b3;
+.top-bar-left a{
+  background-color: #7676b3;
+  color: #FFF;
 }
-section.top-bar-section li:not(.has-form) a:not(.button):hover{
-	background-color: #10104d;
+.top-bar-left a:hover{
+  background-color: #10104d;
 }
-section.top-bar-section li.active:not(.has-form) a:not(.button){
-	background-color: #313983;
+
+.menu .active > a {
+  background-color: #313983;
 }
-section.top-bar-section li.active:not(.has-form) a:not(.button):hover{
-	background-color: #10104d;
+
+.top-bar ul{
+  background-color: #7676b3;
 }
-section.top-bar-section .dropdown li:hover:not(.has-form):not(.active) > a:not(.button){
-	background-color: #10104d;
-}
-section.top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button){
-	background-color: #7676b3;
-}
+
 section#knowledgebase img{
 	width: 100%;
 }
@@ -166,4 +170,3 @@ section.leftPadding{
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
-
