--- a/css/custom.css
+++ b/css/custom.css
@@ -2,23 +2,73 @@
     font-family: setaritFont;
     src: url(../fonts/setarit.otf);
 }
+html, body{
+  height: 100%;
+  background-color: #EEE;
+}
 body *{
 	font-family: setaritFont;
 }
 /* navbar logo */
-.top-bar-title img{
-  max-width: 4rem;
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand img{
+  height: 100%;
+}
+.navbar{
+  z-index: 1;
+  margin-bottom: 0px;
 }
 /* end navbar logo*/
-
-div.content{
-    background-color: #F5F5FF;
+section.cardbox{
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  background-color: #FFF;
+  -webkit-box-shadow: 6px 10px 5px -6px rgba(0,0,0,0.4);
+  -moz-box-shadow: 6px 10px 5px -6px rgba(0,0,0,0.4);
+  box-shadow: 6px 10px 5px -6px rgba(0,0,0,0.4);
+}
+section.cardbox > h2{
+  padding-top: 15px;
+}
+.row{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.welcome-full-window{
+  margin-top: -50px;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-image: url('../img/walk_sea.jpg');
+}
+.welcome-full-window p {
+  color: #000;
+  font-size: 30px;
+  text-align: center;
+}
+.center-parent{
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.center-child{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 div.row{
     background-color: white;
 }
 div#heroContent{
     background-color: transparent;
+}
+#products a img {
+  margin-left: auto;
+  margin-right: auto;
 }
 div.hero{
 	background-color: #1e2247;
@@ -57,25 +107,6 @@ ul.features img.grow:hover {
 div.contain-to-grid{
   background-color: #7676B3;
 }
-nav.top-bar{
-	background-color: #7676b3;
-}
-.top-bar-left a{
-  background-color: #7676b3;
-  color: #FFF;
-}
-.top-bar-left a:hover{
-  background-color: #10104d;
-}
-
-.menu .active > a {
-  background-color: #313983;
-}
-
-.top-bar ul{
-  background-color: #7676b3;
-}
-
 section#knowledgebase img{
 	width: 100%;
 }
@@ -170,3 +201,206 @@ section.leftPadding{
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
+
+/* media queries
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .welcome-full-window p {
+    font-size: 60px;
+  }
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width:1200px) {
+
+}
+
+/* CSS navbar color */
+.navbar-default {
+  background-color: #60609d;
+  border-color: #313983;
+}
+.navbar-default .navbar-brand {
+  color: #ffffff;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #ffffff;
+}
+.navbar-default .navbar-text {
+  color: #ffffff;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #ffffff;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #ffffff;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu {
+  background-color: #60609d;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
+  color: #ffffff;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
+  color: #ffffff;
+  background-color: #313983;
+}
+.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
+  background-color: #313983;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+  color: #ffffff;
+  background-color: #313983;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #ffffff;
+  background-color: #313983;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #ffffff;
+  background-color: #313983;
+}
+.navbar-default .navbar-toggle {
+  border-color: #313983;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #313983;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #ffffff;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #ffffff;
+}
+.navbar-default .navbar-link {
+  color: #ffffff;
+}
+.navbar-default .navbar-link:hover {
+  color: #ffffff;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #ffffff;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #ffffff;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #ffffff;
+    background-color: #313983;
+  }
+}
+/* END navbar color */
+/* Scroll button */
+.scrollButton a {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	z-index: 2;
+	display: inline-block;
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	color: #fff;
+	font : normal 400 20px/1 setaritFont, sans-serif;
+	letter-spacing: .1em;
+	text-decoration: none;
+	transition: opacity .3s;
+}
+.scrollButton a:hover {
+	opacity: .5;
+}
+
+#scrollButton a {
+	padding-top: 60px;
+}
+#scrollButton a span {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 46px;
+	height: 46px;
+	margin-left: -23px;
+	border: 1px solid #fff;
+	border-radius: 100%;
+	box-sizing: border-box;
+}
+#scrollButton a span::after {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	content: '';
+	width: 16px;
+	height: 16px;
+	margin: -12px 0 0 -8px;
+	border-left: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	-webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	box-sizing: border-box;
+}
+#scrollButton a span::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	content: '';
+	width: 44px;
+	height: 44px;
+	box-shadow: 0 0 0 0 rgba(255,255,255,.1);
+	border-radius: 100%;
+	opacity: 0;
+	-webkit-animation: scrollButtonAnimation 3s infinite;
+	animation: scrollButtonAnimation 3s infinite;
+	box-sizing: border-box;
+}
+@-webkit-keyframes scrollButtonAnimation {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 1;
+	}
+	60% {
+		box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes scrollButtonAnimation {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 1;
+	}
+	60% {
+		box-shadow: 0 0 0 60px rgba(255,255,255,.1);
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+/* End scroll button */
