--- a/css/custom.css
+++ b/css/custom.css
@@ -54,12 +54,13 @@ section.cardbox > h2{
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url('../img/walk_sea.jpg');
+  background-image: url('../img/thinking.jpg');
 }
 .welcome-full-window p {
   color: #000;
   font-size: 30px;
   text-align: center;
+  text-shadow: 1px 3px 2px #ffffff;
 }
 .center-parent{
   position: relative;
